--- a/dev/index.html
+++ b/dev/index.html
@@ -4,15 +4,15 @@
 flag_set = FlagSet([
             FlagPair(
                 Flag(&quot;{&quot;, [&quot;&quot;], [&quot;&quot;], flag_type=StartType()),
-                Flag(&quot;}&quot;, [&quot;&quot;], [&quot;&quot;])
+                Flag(&quot;}&quot;, [&quot;&quot;], [&quot;&quot;], flag_type=GreedyType())
             )
           ]);
 
 text = &quot;Foo, {bar {foobar} baz}, foobaz...&quot;;
 
-token_stream = BetweenFlags.tokenize(text, flag_set);
+token_stream = TokenStream(text, flag_set);
 
-BetweenFlags.get_string(text, token_stream, &quot;{-}&quot;)
+token_stream(&quot;{-}&quot;)
 &quot;{bar {foobar}&quot;</code></pre><pre class="documenter-example-output">&quot;{bar {foobar}&quot;</pre><h2 id="Scope-aware"><a class="docs-heading-anchor" href="#Scope-aware">Scope-aware</a><a id="Scope-aware-1"></a><a class="docs-heading-anchor-permalink" href="#Scope-aware" title="Permalink"></a></h2><pre><code class="language-julia">using BetweenFlags
 
 flag_set = FlagSet([
@@ -24,7 +24,7 @@ flag_set = FlagSet([
 
 text = &quot;Foo, {bar {foobar} baz}, foobaz...&quot;;
 
-token_stream = BetweenFlags.tokenize(text, flag_set);
+token_stream = TokenStream(text, flag_set);
 
-BetweenFlags.get_string(text, token_stream, &quot;{-}&quot;)
-&quot;{bar {foobar} baz}&quot;</code></pre><pre class="documenter-example-output">&quot;{bar {foobar} baz}&quot;</pre></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="api/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 1 October 2020 13:23">Thursday 1 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+token_stream(&quot;{-}&quot;)
+&quot;{bar {foobar} baz}&quot;</code></pre><pre class="documenter-example-output">&quot;{bar {foobar} baz}&quot;</pre></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="api/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 1 October 2020 16:07">Thursday 1 October 2020</span>. Using Julia version 1.5.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
